Do not show logout screen when in lockscreen / screensaver

BUG:504575